--- a/floniverse/index.html
+++ b/floniverse/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width; 
-    initial-scale=1; maximum-scale=1; user-scalable=0;"/>
+    <meta name="viewport" content="maximum-scale=1; user-scalable=0;"/>
     <meta charset="UTF-8">
     <title>Floniverse Adventure</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +22,7 @@
 </head>
 <body>
     <div id="canvas">
-<canvas id="gameArea" width="1300" height="650"></canvas>
+<canvas id="gameArea"></canvas>
     </div>
 <script src="/floniverse/game.js"></script>
 </body>
