--- a/floniverse/index.html
+++ b/floniverse/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div id="canvas">
-<canvas id="gameArea"></canvas>
+<canvas id="gameArea" width="1300" height="650"></canvas>
     </div>
 <script src="/floniverse/game.js"></script>
 </body>
