--- a/floniverse/index.html
+++ b/floniverse/index.html
@@ -11,6 +11,8 @@
         body {
             margin: 0 !important;
             background-color: black;
+            overflow: hidden;
+            overflow-y: hidden;
         }
         canvas {
             border: solid black 2px;
