--- a/source/plugins/navbar.html
+++ b/source/plugins/navbar.html
@@ -1,8 +1,8 @@
 <html>
 <nav class="navbar navbar-expand-lg bg-body-tertiary contain">
   <a id="logo" class="navbar-brand logo light" href="https://habilihsanproject.github.io/">
-    <img src="/-assets/logo.png" />
-    <img style="width: 50px;" src="/-assets/title.png" />
+    <img src="https://habilihsanproject.github.io/source/assets/logo.png" />
+    <img style="width: 50px;" src="https://habilihsanproject.github.io/source/assets/title.png" />
   </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,10 +19,10 @@
 
 </html>
 
-<script src="https://habilihsanproject.github.io/-plugins/firebase.js" type="module"></script>
+<script src="https://habilihsanproject.github.io/source/plugins/firebase.js" type="module"></script>
 <script type="module">
   import { ref, child, get } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js"
-  import { database } from "https://habilihsanproject.github.io/-plugins/firebase.js"
+  import { database } from "https://habilihsanproject.github.io/sourceplugins/firebase.js"
   const DB = ref(database)
   get(child(DB, "navbar")).then((snapshot) => {
     if (snapshot.exists()) {
