--- a/twibbon/jkt48-summer/index.html
+++ b/twibbon/jkt48-summer/index.html
@@ -5,7 +5,7 @@
     <title>JKT48 TWIBBON GENERATOR</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <link href="source/plugins/style.css" rel="stylesheet">
+    <link href="https://habilihsanproject.github.io/source/plugins/style.css" rel="stylesheet"-->
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -36,14 +36,14 @@
 
 <footer>
     <p>©2023</p>
-    <img id="footer" class="white" src="source/assets/powered.png">
+    <img id="footer" class="white" src="https://habilihsanproject.github.io/source/assets/powered.png">
 </footer>
 
 </html>
 
-<script src="/plugins/script.js"></script>
+<script src="https://habilihsanproject.github.io/source/plugins/script.js"></script>
 <script>
-    $.get("/plugins/navbar.html", function (data) {
+    $.get("https://habilihsanproject.github.io/source/plugins/navbar.html", function (data) {
         $("#navbar").replaceWith(data)
     })
     jQuery(function ($) {
@@ -61,9 +61,13 @@
     var belakang = "https://pbs.twimg.com/media/FzJqdFxWcAA1hCJ?format=jpg&name=large"
     var frame = "https://pbs.twimg.com/media/FzJqdFxWcAA1hCJ?format=jpg&name=large"
     var lebar = null; var tinggi = null; var disable = null
+
+    /*
     var canvas = document.getElementById('canvas')
     canvas.style.background = `url(${frame})`
     canvas.style.backgroundSize = "cover"
+    */
+
     if (window.innerWidth > 960) {
         lebar = window.innerWidth * 0.5
         tinggi = window.innerWidth * 0.5
@@ -75,6 +79,7 @@
         canvas.width = lebar
         canvas.height = tinggi
     }
+
     function download() {
         var canvas = document.getElementById("canvas")
         var dataURL = canvas.toDataURL("image/png")
@@ -85,10 +90,13 @@
         link.click()
         document.body.removeChild(link)
     }
+
     function change() {
         window.location.reload()
     }
+
     function files(event) {
+        console.log(event)
         if (event == undefined) {
             window.location.reload()
         }
