--- a/twibbon/index.html
+++ b/twibbon/index.html
@@ -36,7 +36,7 @@
 
 <footer>
     <p>©2023</p>
-    <img id="footer" class="white" src="https://habilihsanproject.github.io/source/assets/powered.png">
+    <img id="footer" src="https://habilihsanproject.github.io/source/assets/powered.png">
 </footer>
 
 </html>
