--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -3,22 +3,40 @@
     <head>
         <meta charset="utf-8">
         <title>M3U8 Player</title>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="https://unpkg.com/popper.js@1.12.3"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+            crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="home.css">
         <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
         <div class="col-lg-6" id="text-box">
-            <h1 class="page-name">M3U8 Player</h1>
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Paste the m3u8 link here" id="m3u8-placeholder">
+            <h1 class="page-name">JKT48 Theater</h1>
+            <ul class="list-group">
+                <li class="list-group-item active" style="display: flex; margin-bottom: 10px;" aria-current="true">
+                    <a href="" style="margin-right: auto; color: #fff;">
+                    JKT48 Theater 11th Anniversary Event
+                    </a>
+                    19:00 WIB
+                </li>
+                <li class="list-group-item active" style="display: flex; margin-bottom: 10px; font-weight: bold;" aria-current="true">
+                    <button class="btn btn-primary" type="button" style="margin-left: auto; margin-right: auto" id="play-btn">Play</button>
+                </li>
+              </ul>
+            <!--div class="input-group">
+                <input type="text" class="form-control" placeholder="Input Name" id="m3u8-placeholder">
+                <input type="text" class="form-control" placeholder="Input Auth Code" id="m3u8-placeholder">
                 <span class="input-group-btn">
-                    <button class="btn btn-primary" type="button" id="play-btn">Play</button>
+                    <button class="btn btn-primary" style="border-radius: 0 10px 10px 0;" type="button" id="play-btn">Play</button>
                 </span>
-            </div>
+            </div-->
         </div>
     </body>
 </html>
