--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -22,7 +22,7 @@
             <ul class="list-group">
                 <li class="list-group-item active" style="display: flex; margin-bottom: 10px;" aria-current="true">
                     <a href="" style="margin-right: auto; color: #fff;">
-                    JKT48 Theater 11th Anniversary Event
+                    Aturan Anti Cinta
                     </a>
                     19:00 WIB
                 </li>
