--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -1,42 +1,29 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>M3U8 Player</title>
-        <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-            crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="home.css">
-        <script type="text/javascript" src="main.js"></script>
-    </head>
-    <body>
-        <div class="col-lg-6" id="text-box">
-            <h1 class="page-name">JKT48 Theater</h1>
-            <ul class="list-group">
-                <li class="list-group-item active" style="display: flex; margin-bottom: 10px;" aria-current="true">
-                    <a href="" style="margin-right: auto; color: #fff;">
-                    Aturan Anti Cinta
-                    </a>
-                    19:00 WIB
-                </li>
-                <li class="list-group-item active" style="display: flex; margin-bottom: 10px; font-weight: bold;" aria-current="true">
-                    <button class="btn btn-primary" type="button" style="margin-left: auto; margin-right: auto" id="play-btn">Play</button>
-                </li>
-              </ul>
-            <!--div class="input-group">
-                <input type="text" class="form-control" placeholder="Input Name" id="m3u8-placeholder">
-                <input type="text" class="form-control" placeholder="Input Auth Code" id="m3u8-placeholder">
-                <span class="input-group-btn">
-                    <button class="btn btn-primary" style="border-radius: 0 10px 10px 0;" type="button" id="play-btn">Play</button>
-                </span>
-            </div-->
-        </div>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://vjs.zencdn.net/5.19.2/video-js.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
+
+    <script src="https://vjs.zencdn.net/5.19.2/video.js"></script>
+    <script src="https://raw.githubusercontent.com/sahilkashyap64/hls/master/js/hls.min.js?v=v0.9.1"></script>
+    <script src="https://raw.githubusercontent.com/sahilkashyap64/hls/master/js/videojs5-hlsjs-source-handler.min.js?v=0.3.1"></script>
+    <script src="https://raw.githubusercontent.com/sahilkashyap64/hls/master/js/vjs-quality-picker.js?v=v0.0.2"></script>
+    <script src="./index.js" type="module"></script>
+    <title>JKT48 THEATER STREAMING</title>
+</head>
+
+<body>
+    <div class="player-container">
+        <video id="video-player" class="video-js vjs-default-skin" controls>
+            <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser
+                that supports HTML5 video</p>
+        </video>
+    </div>
+</body>
+
 </html>
