--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://vjs.zencdn.net/5.19.2/video-js.css" rel="stylesheet">
+    <link href="https://unpkg.com/video.js@8.5.2/dist/video-js.min.css" rel="stylesheet">
     <link href="./index.css" rel="stylesheet">
 
-    <script src="https://vjs.zencdn.net/5.19.2/video.js"></script>
-    <script src="https://raw.githubusercontent.com/sahilkashyap64/hls/master/js/hls.min.js?v=v0.9.1"></script>
-    <script src="https://raw.githubusercontent.com/sahilkashyap64/hls/master/js/videojs5-hlsjs-source-handler.min.js?v=0.3.1"></script>
-    <script src="https://raw.githubusercontent.com/sahilkashyap64/hls/master/js/vjs-quality-picker.js?v=v0.0.2"></script>
-    <script src="./index.js" type="module"></script>
+    <script src="https://unpkg.com/video.js@8.5.2/dist/video.min.js"></script>
+    <script src="./index.js"></script>
+
     <title>JKT48 THEATER STREAMING</title>
 </head>
 
