--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -20,6 +20,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
         integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
         crossorigin="anonymous"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
+
+    <script src="./firebase.js"></script>
+    <!--script src="app.js"></script-->
     <script src="./index.js"></script>
     <script src="./schedule.js"></script>
 
@@ -31,6 +38,28 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1>Firebase Authentication</h1>
+        <div id="login-container">
+            <h2>Login</h2>
+            <form id="login-form">
+                <input type="email" id="email" placeholder="Email" required><br>
+                <input type="password" id="password" placeholder="Password" required><br>
+                <button type="submit">Login</button>
+            </form>
+        </div>
+        <div id="signup-container">
+            <h2>Sign Up</h2>
+            <form id="signup-form">
+                <input type="email" id="signup-email" placeholder="Email" required><br>
+                <input type="password" id="signup-password" placeholder="Password" required><br>
+                <button type="submit">Sign Up</button>
+            </form>
+        </div>
+        <button id="logout-button">Logout</button>
+    </div>
+
+
     <div class="player-container">
         <video id="video-player" class="video-js vjs-default-skin" controls>
             <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser
@@ -41,15 +70,15 @@
         <p class="title-schedule">JADWAL JKT48 THEATER MINGGU INI:</p>
         <table class="table">
             <thead>
-              <tr>
-                <th>Tanggal</th>
-                <th>Setlist</th>
-                <th>Pukul</th>
-              </tr>
+                <tr>
+                    <th>Tanggal</th>
+                    <th>Setlist</th>
+                    <th>Pukul</th>
+                </tr>
             </thead>
             <tbody id="show">
             </tbody>
-          </table>
+        </table>
     </div>
 </body>
 
