--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -14,52 +14,42 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
 
-    <script src="https://unpkg.com/video.js@8.5.2/dist/video.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-        crossorigin="anonymous"></script>
-
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
-    <script src="https://habilihsanproject.github.io/source/plugins/firebase.js" type="module"></script>
 
     <script src="./script/index.js"></script>
     <script src="./script/schedule.js"></script>
 
     <title>JKT48 THEATER STREAMING</title>
     <div class="title">
-        <img class="logo" src="https://jkt48.com/images/theater.header.jpg">
+        <a href="../index.html" class="logo"><img src="https://jkt48.com/images/theater.header.jpg"></a>
         <a href="./page/signup.html" class="btn btn-success authBtn" role="button" id="login-btn">Sign Up</a>
         <a href="./page/login.html" class="btn btn-primary authBtn" role="button" id="signup-btn">Log In</a>
-        <button class="btn btn-danger authBtn" id="logout-btn" style="display: none;">Logout</button>
+        <a href="./page/payment.html" class="btn btn-info" style="display: none; color: white;" id="link">Watch</a>
+        <button class="btn btn-danger authBtn" id="logout-btn" style="display: none;">Log Out</button>
     </div>
 </head>
 
 <body>
     <div class="schedule">
         <p class="welcome">
-            Selamat datang di JKT48 THEATER STREAMING, <br>
-            disini kamu bisa menonton tayangan streaming setlist JKT48. <br>
-            Hanya dengan sekali login dan melakukan pembelian tiket dibawah ini.
+            Selamat datang di JKT48 THEATER STREAMING! <br>
+            Disini kamu bisa menonton tayangan streaming setlist JKT48. <br>
         </p><br>
-        <p class="title-schedule">JADWAL JKT48 THEATER MINGGU INI:</p>
+        <p class="title-schedule">Jadwal JKT48 Theater minggu ini:</p>
         <table class="table">
             <thead>
                 <tr>
                     <th>Tanggal</th>
                     <th>Setlist</th>
                     <th>Pukul</th>
-                    <th>Tiket</th>
                 </tr>
             </thead>
             <tbody id="show">
             </tbody>
         </table><br>
-        <p class="title-schedule">MEMBER YANG PERFORM MINGGU INI:</p>
+        <p class="title-schedule">Member yang perform minggu ini:</p>
         <table class="table">
             <thead>
                 <tr>
