--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -23,16 +23,16 @@
 
     <title>JKT48 THEATER STREAMING</title>
     <div class="title">
-        <a href="../index.html" class="logo"><img src="https://jkt48.com/images/theater.header.jpg"></a>
+        <a href="../index.html" class="logo"><img src="./res/LOGO.png"></a>
         <a href="./page/signup.html" class="btn btn-success authBtn" role="button" id="login-btn">Sign Up</a>
         <a href="./page/login.html" class="btn btn-primary authBtn" role="button" id="signup-btn">Log In</a>
-        <a href="./page/payment.html" class="btn btn-info" style="display: none; color: white;" id="link">Watch</a>
+        <a href="./page/payment.html" class="btn btn-info authBtn" style="display: none; color: white;" id="link">Watch</a>
         <button class="btn btn-danger authBtn" id="logout-btn" style="display: none;">Log Out</button>
     </div>
 </head>
 
 <body>
-    <div class="schedule">
+    <div class="contain">
         <p class="welcome">
             Selamat datang di JKT48 THEATER STREAMING! <br>
             Disini kamu bisa menonton tayangan streaming setlist JKT48. <br>
