--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -23,7 +23,7 @@
 
     <title>JKT48 THEATER STREAMING</title>
     <div class="title">
-        <a href="../index.html" class="logo"><img src="./res/LOGO.png"></a>
+        <a href="../index.html" class="logo"><img src="./res/logo.png"></a>
         <a href="./page/signup.html" class="btn btn-success authBtn" role="button" id="login-btn">Sign Up</a>
         <a href="./page/login.html" class="btn btn-primary authBtn" role="button" id="signup-btn">Log In</a>
         <a href="./page/payment.html" class="btn btn-info authBtn" style="display: none; color: white;" id="link">Watch</a>
