--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -20,6 +20,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
 
     <script src="./script/index.js"></script>
     <script src="./script/schedule.js"></script>
