--- a/jkt48-theater/index.html
+++ b/jkt48-theater/index.html
@@ -59,6 +59,9 @@
                         <li>Isi biodata pembelian dan lakukan pembayaran agar dapat mengakses laman Streaming Theater</li>
                         <li>Jika kamu sudah membeli tiket, maka kamu akan secara otomatis ke laman Streaming Theater</li>
                     </ul>
+                    <div class="alert alert-warning" role="alert">
+                        <span class="fw-bold">Apabila kamu sudah membeli tiket, namun tidak bisa mengakses lama Streaming Theater. Segera hubungi kami di <a href="https://t.me/h48ilihsan" target="_blank">Telegram</a> dengan melampirkan bukti pembayaran</span>
+                    </div>
                 </div>
 
                 <!-- Modal Footer -->
