JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/p/message.html
+++ b/jkt48-pm/p/message.html
@@ -37,7 +37,7 @@
         <div class="button">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                 data-bs-target="#myModal">Profile</button>
-            <button type="button" class="btn btn-danger" onclick="LOGOUT()" style="margin-left: auto;">Log Out</button>
+            <button type="button" class="btn btn-danger" id="exit" style="margin-left: auto;">Log Out</button>
 
             <div class="modal fade" id="myModal">
                 <div class="modal-dialog modal-dialog-centered">
