--- a/jkt48-pm/p/subs.html
+++ b/jkt48-pm/p/subs.html
@@ -16,7 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-    <script src="../s/register.js"></script>
+    <script src="../s/subs.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
@@ -33,18 +33,10 @@
 </head>
 
 <body>
-    <form id="auth" class="alert alert-light mb-5">
-        <p class="modal-title">REGISTER</p><br />
-        <input type="email" class="form-control" id="email" placeholder="Email Address"><br />
-        <div class="input-group" style="display: flex;">
-            <input type="password" class="form-control" id="password" placeholder="Password">
-            <button class="btn btn-light" type="button" id="togglePassword">
-                <i class="bi bi-eye-slash" id="toggleIcon"></i>
-            </button>
-        </div><br />
-            <button type="button" class="btn btn-success" id="register"
-                style="width: 100%;">Register</button>
-    </form>
+    <div class="payment">
+        <a class="mayar-product-embed" href="https://habilihsanproject.mayar.link/s/jkt48-private-message" data-hide-merchant-logo="true" data-hide-product-images="true" >Loading...</a>
+        <script type="text/javascript" src="https://pub-fa933e278fb7467aa20592e0a61f5082.r2.dev/mayar-embed.js"></script>
+    </div>
 </body>
 <footer class="footer">
     <span class="copyright badge text-bg-secondary">Powered by <b>JKT48PMMMWWW</b></span>
