JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -44,7 +44,7 @@
         </div>
         <input type="email" class="form-control" id="email" placeholder="Email Address"><br />
         <div class="input-group" style="display: flex;">
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <input type="password" class="form-control" id="password" placeholder="Password" autocomplete="current-password">
             <button class="btn btn-light" type="button" id="togglePassword">
                 <i class="bi bi-eye-slash" id="toggleIcon"></i>
             </button>
