JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -42,7 +42,7 @@
                 Layanan ini hanya bisa diakses dalam satu perangkat saja.
             </span>
         </div>
-        <input type="email" class="form-control" id="email" placeholder="Email Address"><br />
+        <input type="email" class="form-control" id="email" placeholder="Email Address" autocomplete="username"><br />
         <div class="input-group" style="display: flex;">
             <input type="password" class="form-control" id="passwordLogin" placeholder="Password" autocomplete="current-password">
             <button class="btn btn-light" type="button" id="togglePassword">
