JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <form id="auth" class="alert alert-light mb-5">
+    <form id="auth" class="mb-5">
         <p class="modal-title">LOG IN</p><br />
         <div class="alert alert-primary text-center" role="alert">
             <span class="fw-bold" style="font-size: smaller;">
