JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -35,11 +35,10 @@
 <body>
     <form id="auth" class="mb-5">
         <p class="modal-title">REGISTER</p><br />
-        <div class="alert-primary text-center" role="alert">
+        <div class="alert alert-primary text-center" role="alert">
             <span class="fw-bold" style="font-size: smaller;">
                 Ini adalah layanan JKT48PMMMWWW dimana kamu bisa mengakses messages, pictures, dan voice notes dari member JKT48 secara berlangganan.
                 Layanan ini tidak menyediakan notifikasi pesan masuk ataupun ucapan ulang tahun.
-                Layanan ini hanya bisa diakses dalam satu perangkat saja.
             </span>
         </div>
         <input type="email" class="form-control" id="email" placeholder="Email Address" autocomplete="username"><br />
