JKR48 PRIVATE MESSAGE

--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -34,7 +34,7 @@
 
 <body>
     <form id="auth" class="mb-5">
-        <p class="modal-title">REGISTER</p><br />
+        <p class="modal-title">REGISTER</p>
         <div class="alert alert-primary text-center" role="alert">
             <span class="fw-bold" style="font-size: smaller;">
                 Ini adalah layanan JKT48PMMMWWW dimana kamu bisa mengakses messages, pictures, dan voice notes dari member JKT48 secara berlangganan.
