JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/p/message.html
+++ b/jkt48-pm/p/message.html
@@ -34,13 +34,14 @@
     </div>
 </head>
 
-<body>
+<body style="background-image: url(https://jkt48.primesse.me/images/top_background.png)">
     <form id="load" class="load">
         <div>
     <div class="spinner-border" role="status"></div>
     <span class="modal-title ms-5">Memuat Data...</span></div>
 </form>
-    <form id="items" style="display: none;">
+<br/>
+    <form id="items" class="items" style="display: none;">
         <div class="button">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                 data-bs-target="#myModal">Profile</button>
