JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -49,8 +49,9 @@
                 <i id="toggle-icon-register" class="bi bi-eye-slash"></i>
             </button>
         </div><br />
-            <button type="submit" class="btn btn-success"
-                style="width: 100%;">Register</button>
+        <a href="../index.html" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true"
+                    style="margin-right: auto;">Log In</a>
+            <button type="submit" class="btn btn-success">Register</button>
     </form></div>
     </body>
 </body>
