JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/p/message.html
+++ b/jkt48-pm/p/message.html
@@ -94,7 +94,7 @@
         </p><br/>
         <div class="modal-footer">
             <button type="button" class="btn btn-danger" id="exits" style="margin-right: auto;">Log Out</button>
-            <a href="https://habilihsanproject.mayar.link/s/jkt48-private-message" class="btn btn-success" tabindex="-1"
+            <a href="../p/subs.html" class="btn btn-success" tabindex="-1"
                 role="button" aria-disabled="true">Langganan</a>
           </div>
     </form>
