--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -49,9 +49,11 @@
                 <i id="toggle-icon-register" class="bi bi-eye-slash"></i>
             </button>
         </div><br />
+        <div style="display: flex;">
         <a href="../index.html" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true"
                     style="margin-right: auto;">Log In</a>
             <button type="submit" class="btn btn-success">Register</button>
+        </div>
     </form></div>
     </body>
 </body>
