--- a/jkt48-pm/p/subs.html
+++ b/jkt48-pm/p/subs.html
@@ -28,7 +28,7 @@
 
 <body style="background-image: url(https://jkt48.primesse.me/images/top_background.png);">
     <div class="payment">
-        <a class="mayar-product-embed" href="https://habilihsanproject.mayar.link/s/jkt48-private-message" data-hide-merchant-logo="true" data-hide-product-images="true" >Loading...</a>
+        <a class="mayar-product-embed" href="https://habilihsanproject.mayar.link/s/jkt48-private-message?iframe=true" scrolling="true" data-hide-merchant-logo="true" data-hide-product-images="true" >Loading...</a>
         <script type="text/javascript" src="https://pub-fa933e278fb7467aa20592e0a61f5082.r2.dev/mayar-embed.js"></script>
     </div>
 </body>
