JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/p/subs.html
+++ b/jkt48-pm/p/subs.html
@@ -27,6 +27,11 @@
 </head>
 
 <body style="background-image: url(https://jkt48.primesse.me/images/top_background.png);">
+    <div class="alert alert-warning text-center" role="alert">
+        <span class="fw-bold" style="font-size: smaller;">
+            Kami mohon maaf, untuk sementara payment dengan e-wallet DANA belum bisa digunakan!
+        </span>
+    </div>
     <div class="payment">
         <a class="mayar-product-embed" href="https://habilihsanproject.mayar.link/s/jkt48-private-message?iframe=true" scrolling="true" data-hide-merchant-logo="true" data-hide-product-images="true" >Loading...</a>
         <script type="text/javascript" src="https://pub-fa933e278fb7467aa20592e0a61f5082.r2.dev/mayar-embed.js"></script>
