--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
+    <script src="https://rawgit.com/aws/amazon-cognito-identity-js/master/dist/aws-cognito-sdk.min.js"></script>
+    <script src="https://rawgit.com/aws/amazon-cognito-identity-js/master/dist/amazon-cognito-identity.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
@@ -16,7 +22,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./r/index.css" />
 
     <title>JKT48 PRIVATE MESSAGE</title>
@@ -27,33 +34,70 @@
     </div>
 </head>
 
-<body id="body">
-    <div class="form">
-        <p class="modal-title">LOG IN</p><br/>
-        <div class="alert alert-primary text-center" role="alert">
-            <span class="fw-bold" style="font-size: smaller;">
-                Ini adalah layanan JKT48PMMMWWW dimana kamu bisa mengakses messages, pictures, dan voice notes dari
-                member JKT48 secara berlangganan.
-                Layanan ini tidak menyediakan notifikasi pesan masuk ataupun ucapan ulang tahun.
-            </span>
-        </div>
-        <form id="login">
-            <input id="email-login" type="email" class="form-control" placeholder="Email Address"
-                autocomplete="username"><br />
-            <div class="input-group" style="display: flex;">
-                <input id="password-login" type="password" class="form-control" placeholder="Password"
-                    autocomplete="current-password">
-                <button class="btn btn-light" type="button" id="toggle-password-login">
-                    <i class="bi bi-eye-slash" id="toggle-icon-login"></i>
-                </button>
-            </div><br />
-            <div style="display: flex;">
-                <a href="https://habilihsanproject.github.io/jkt48-pm//p/register" class="btn btn-success" tabindex="-1" role="button" aria-disabled="true"
-                    style="margin-right: auto;">Register</a>
-                <button type="submit" class="btn btn-primary">Login</button>
+<body style="background-image: url(https://jkt48.primesse.me/images/top_background.png)">
+    <form id="load" class="load">
+        <div>
+    <div class="spinner-border" role="status"></div>
+    <span class="modal-title ms-5">Memuat Data...</span></div>
+</form>
+<br/>
+    <form id="items" class="items" style="display: none;">
+        <div class="button">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="#myModal">Profile</button>
+            <button type="button" class="btn btn-danger" id="exit" style="margin-left: auto;">Log Out</button>
+
+            <div class="modal fade" id="myModal">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                            <p class="modal-title">Information</p>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+
+                        <!-- Modal Body -->
+                        <div class="modal-body">
+                            <div style="display: flex;">
+                                <p style="text-align: left;">Email</p>
+                                <p style="margin-left: auto; font-weight: bold;" id="email"></p>
+                            </div>
+                            <div style="display: flex;">
+                                <p style="text-align: left;">Start Subscription</p>
+                                <p style="margin-left: auto; font-weight: bold;" id="startSubs"></p>
+                            </div>
+                            <div style="display: flex;">
+                                <p style="text-align: left;">End Subscription</p>
+                                <p style="margin-left: auto; font-weight: bold;" id="endSubs"></p>
+                            </div>
+                        </div>
+
+                        <!-- Modal Footer -->
+                    </div>
+                </div>
             </div>
-        </form>
-    </div>
+        </div>
+        <div class="input-group">
+            <select class="form-select" id="member">
+            </select>
+            <button type="button" class="btn btn-primary" id="get">GET</button>
+        </div>
+        <ul class="list-group" id="chat">
+            <li class="list-group-item" style="display: none;" id="chat-item"></li>
+        </ul>
+    </form>
+    <form id="empty" class="empty" style="display: none;">
+        <p class="modal-title">Data Tidak Ditemukan!</p><br />
+        <p class="modal-body mb-3">
+            Mohon maaf! Kami tidak dapat menemukan data berlangganan kamu.<br />
+            Silahkan berlangganan untuk menikmati konten dari web ini.
+        </p><br/>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger" id="exits" style="margin-right: auto;">Log Out</button>
+            <a href="https://habilihsanproject.github.io/jkt48-pm/p/subs" class="btn btn-success" tabindex="-1"
+                role="button" aria-disabled="true">Langganan</a>
+          </div>
+    </form>
 </body>
 <footer class="footer">
     <span class="copyright badge text-bg-secondary">Powered by <b>JKT48PMMMWWW</b></span>
