JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -36,9 +36,10 @@
 
 <body style="background-image: url(https://jkt48.primesse.me/images/top_background.png)">
     <form id="load" class="load">
-        <div>
+        <div class="alert alert-primary">
     <div class="spinner-border" role="status"></div>
-    <span class="modal-title ms-5">Memuat Data...</span></div>
+    <span class="modal-title ms-3">Memuat Data...</span><br/>
+</div>
 </form>
 <br/>
     <form id="items" class="items" style="display: none;">
