--- a/jkt48-pm/p/message.html
+++ b/jkt48-pm/p/message.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
         integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
         crossorigin="anonymous"></script>
+    <script src="https://rawgit.com/aws/amazon-cognito-identity-js/master/dist/aws-cognito-sdk.min.js"></script>
+    <script src="https://rawgit.com/aws/amazon-cognito-identity-js/master/dist/amazon-cognito-identity.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="./s/index.js"></script>
 
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../r/index.css" />
+    <link rel="stylesheet" href="./r/index.css" />
 
     <title>JKT48 PRIVATE MESSAGE</title>
     <div class="title">
@@ -26,15 +33,10 @@
         </a>
     </div>
 </head>
-
-<body style="background-image: url(https://jkt48.primesse.me/images/top_background.png);">
-    <div class="payment">
-        <a style="height: -webkit-fill-available !important" class="mayar-product-embed" href="https://habilihsanproject.mayar.link/s/jkt48-private-message?iframe=true" data-hide-merchant-logo="true" data-hide-product-images="true" ><div class="spinner-border" role="status"></div></a>
-        <script type="text/javascript" src="https://pub-fa933e278fb7467aa20592e0a61f5082.r2.dev/mayar-embed.js"></script>
-    </div>
+<body style="background-image: url(https://jkt48.primesse.me/images/top_background.png)">
+    
 </body>
-<footer class="footer">
-    <span class="copyright badge text-bg-secondary">Powered by <b>JKT48PMMMWWW</b></span>
-</footer>
-
+<script>
+    location.replace("https://habilihsanproject.github.io/jkt48-pm/")
+</script>
 </html>
