--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -47,6 +47,9 @@
         <div class="button">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                 data-bs-target="#myModal">Profile</button>
+            <a href="https://t.me/JKT48PMMMWWW">
+                <button type="button" class="btn btn-info" style="margin-left: auto;">Contact Us</button>
+            </a>
             <button type="button" class="btn btn-danger" id="exit" style="margin-left: auto;">Log Out</button>
 
             <div class="modal fade" id="myModal">
