--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -39,8 +39,26 @@
         <div class="alert alert-primary text-center" role="alert">
             <span class="fw-bold" style="font-size: smaller;">
                 Ini adalah layanan JKT48PMMMWWW dimana kamu bisa mengakses messages, pictures, dan voice notes dari member JKT48 secara berlangganan.
-                Layanan ini tidak menyediakan notifikasi pesan masuk ataupun ucapan ulang tahun.
+                Layanan ini tidak menyediakan notifikasi pesan masuk ataupun ucapan ulang tahun.<br/><button type="button" class="mt-2 w-100 btn btn-outline-primary btn-sm" data-bs-toggle="modal"
+                data-bs-target="#myModal">Lihat Demo</button>
             </span>
+        </div>
+
+        <div class="modal fade" id="myModal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <p class="modal-title">Information</p>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal Body -->
+                    <video src="../r/demo.mp4"></video>
+
+                    <!-- Modal Footer -->
+                </div>
+            </div>
         </div>
 
         <form id="register">
