JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -47,8 +47,8 @@
         <div class="button">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                 data-bs-target="#myModal">Profile</button>
-            <a href="https://t.me/JKT48PMMMWWW">
-                <button type="button" class="btn btn-info" style="margin-left: auto;">Contact Us</button>
+            <a href="https://t.me/JKT48PMMMWWW" style="margin-left: auto;">
+                <button type="button" class="btn btn-info" >Contact Us</button>
             </a>
             <button type="button" class="btn btn-danger" id="exit" style="margin-left: auto;">Log Out</button>
 
