JKT48 PRIVATE MESSAGE

--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -49,12 +49,12 @@
                 <div class="modal-content">
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <p class="modal-title">Information</p>
+                        <p class="modal-title">Demo</p>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
 
                     <!-- Modal Body -->
-                    <video src="../r/demo.mp4"></video>
+                    <video src="../r/demo.mp4" controls></video>
 
                     <!-- Modal Footer -->
                 </div>
