JKT48 PRIVATE MESSAGE

--- a/wemp/cms/emodul/index.html
+++ b/wemp/cms/emodul/index.html
@@ -41,9 +41,19 @@
                 <tbody id="emodul">
                 </tbody>
             </table>
-            <button type="button" class="btn btn-outline-primary w-100">
+            <button type="button" class="btn btn-outline-primary w-100" data-bs-toggle="modal" data-bs-target="#tambahModul">
                 <i class="bi bi-plus"></i> Tambah E-Modul
             </button>
+            <div class="modal fade" id="tambahModul">
+                <div class="modal dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            Tambah E-Modul
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
