--- a/validitech/p/profil.html
+++ b/validitech/p/profil.html
@@ -229,7 +229,7 @@
         firebase.auth().signOut()
             .then(() => {
                 alert("Logout berhasil!")
-                location.replace("./p/login.html")
+                location.replace("./login.html")
             })
             .catch((error) => {
                 alert(error.message)
