--- a/validitech/index.html
+++ b/validitech/index.html
@@ -57,7 +57,7 @@
     </div>
 </body>
 <footer class="bg-body-tertiary p-3 text-center">
-    Habil Ihsan © 2024
+    Validitech © 2024
 </footer>
 
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
