--- a/validitech/p/register.html
+++ b/validitech/p/register.html
@@ -30,12 +30,12 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid  ms-5 me-5">
-            <span class="navbar-brand fw-bold">Validitech</span>
+            <span onclick="location.replace('../index.html')" class="navbar-brand fw-bold">Validitech</span>
         </div>
     </nav>
 
     <!-- Container -->
-    <div class="container-fluid p-5 w-75 fill mb-5">
+    <div class="container-fluid p-5 w-100 fill mb-5">
         <form class="bg-body-tertiary p-5">
             <h1 class="text-center mb-5">Registrasi</h1>
 
