--- a/validitech/p/profil.html
+++ b/validitech/p/profil.html
@@ -30,7 +30,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid ms-5 me-5">
-            <span class="navbar-brand fw-bold">Validitech</span>
+            <span onclick="location.replace('../index.html')" class="navbar-brand fw-bold">Validitech</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,7 +40,7 @@
     </nav>
 
     <!-- Container -->
-    <div class="container-fluid p-5 w-75 fill mb-5">
+    <div class="container-fluid p-5 w-100 fill mb-5">
         <form class="bg-body-tertiary p-5">
             <h1 class="text-center mb-5">Profil</h1>
 
